// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Web App Service Spec tests inputSetMode 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  />
</div>
`;

exports[`Azure Web App Service Spec tests renders ServiceStep for Input sets 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  >
    <div
      class="nopadLeft accordionSummary"
      id="Stage.undefined.Service.Artifacts.Sidecars"
    />
    <div
      class="nopadLeft accordionSummary"
      id="Stage.undefined.Service.Artifacts.Sidecars"
    >
      <p
        class="StyledProps--font StyledProps--main inputheader"
      >
        sidecarArtifactText
      </p>
    </div>
  </div>
</div>
`;

exports[`Azure Web App Service Spec tests renders ServiceStep for Service Tab  1`] = `
<div>
  <div
    class="serviceDefinition"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard"
      id="pipeline.startup.command.name"
    >
      <div
        class="tabSubHeading listHeader ng-tooltip-native"
        data-tooltip-id="KubernetesStartupScript"
      >
        optionalField
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <section />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
          >
            <button
              aria-label="common.addName"
              class="bp3-button Button--button StyledProps--font StyledProps--main addStartupScript Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
              data-test-id="addStartupScript"
              id="add-startup-script"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                common.addName
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard"
      id="pipeline.appServiceConfig.title"
    >
      <div
        class="tabSubHeading listHeader ng-tooltip-native"
        data-tooltip-id="KubernetesApplicationConfig"
      >
        optionalField
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <section />
              <section />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
          >
            <button
              aria-label="common.addName"
              class="bp3-button Button--button StyledProps--font StyledProps--main addServiceConfig Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
              id="add-applicationSetting"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                common.addName
              </span>
            </button>
            <button
              aria-label="common.addName"
              class="bp3-button Button--button StyledProps--font StyledProps--main addServiceConfig Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
              id="add-connectionString"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                common.addName
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard"
      id="pipelineSteps.deploy.serviceSpecifications.deploymentTypes.artifacts"
    >
      <div
        class="tabSubHeading listHeader ng-tooltip-native"
        data-tooltip-id="KubernetesDeploymentTypeArtifacts"
      >
        pipelineSteps.deploy.serviceSpecifications.deploymentTypes.artifacts
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
            >
              <button
                aria-label="pipeline.artifactsSelection.addPrimaryArtifact"
                class="bp3-button Button--button StyledProps--font StyledProps--main addArtifact Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                id="add-artifact"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                  icon="plus"
                >
                  <svg
                    data-icon="plus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      plus
                    </desc>
                    <path
                      d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  pipeline.artifactsSelection.addPrimaryArtifact
                </span>
              </button>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
            >
              <button
                aria-label="pipeline.artifactsSelection.addSidecar"
                class="bp3-button Button--button StyledProps--font StyledProps--main addArtifact Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                id="add-artifact"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                  icon="plus"
                >
                  <svg
                    data-icon="plus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      plus
                    </desc>
                    <path
                      d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  pipeline.artifactsSelection.addSidecar
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accordionTitle"
    >
      <div
        class="tabHeading"
        id="advanced"
      >
        advancedTitle
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card sectionCard"
        id="common.variables"
      >
        <div
          class="tabSubHeading listHeader ng-tooltip-native"
          data-tooltip-id="KubernetesDeploymentTypeVariables"
        >
          common.variables
        </div>
        <div
          class="Layout--vertical StyledProps--main"
          style="border-radius: 5px;"
        >
          <section />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Azure Web App Service Spec tests variablesForm 1`] = `
<div>
  <div
    class="Accordion--panel"
    data-open="false"
    data-testid="undefined.Variables-panel"
    id="undefined.Variables-panel"
  >
    <div
      class="Accordion--summary accordianSummaryL1"
      data-testid="undefined.Variables-summary"
    >
      <div
        class=""
      >
        <div
          class="accordionSummary"
        >
          <span
            class="bp3-icon StyledProps--main iconCollapsed"
            data-icon="accordion-collapsed"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#F3F3FA"
                height="11.5"
                rx="0.75"
                stroke="#9293AB"
                stroke-width="0.5"
                width="11.5"
                x="0.25"
                y="0.25"
              />
              <path
                d="M10 6.571H6.571V10H5.43V6.571H2V5.43h3.429V2H6.57v3.429H10V6.57z"
                fill="#0A3364"
                opacity="0.7"
              />
            </svg>
          </span>
          <span
            class="bp3-icon StyledProps--main iconExpanded"
            data-icon="accordion-expanded"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 12 11"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#F3F3FA"
                height="10.5"
                rx="0.75"
                stroke="#9293AB"
                stroke-width="0.5"
                width="11.5"
                x="0.25"
                y="0.25"
              />
              <path
                d="M10 6.143H2V5h8v1.143z"
                fill="#0A3364"
                opacity="0.7"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-black"
            >
              common.variables
            </p>
          </p>
        </div>
      </div>
      <div
        class="Accordion--chevron"
      />
    </div>
    <div
      class="bp3-collapse Accordion--collapse"
    >
      <div
        aria-hidden="false"
        class="bp3-collapse-body"
        style="transform: translateY(-undefinedpx);"
      />
    </div>
  </div>
</div>
`;
